Refactor api-server and update timeapp layout and main index logic
